--- a/TaskZen/wwwroot/css/taskBoard.css
+++ b/TaskZen/wwwroot/css/taskBoard.css
@@ -1,1 +1,60 @@
-﻿
+﻿body {
+    font-family: 'Inter', sans-serif; /* Cambia a Poppins si prefieres */
+}
+
+.task-column {
+    border-radius: 12px;
+    padding: 15px;
+    margin: 10px;
+    min-height: 300px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+}
+
+.todo {
+    background: #e5d4ff91;
+    border: 1px solid #7B2CBF;
+}
+
+.in-progress {
+    background: #fad9b887;
+    border: 1px solid #E07B39;
+}
+
+.done {
+    background: #d4f8e8a6;
+    border: 1px solid #2D6A4F;
+}
+
+.task-list {
+    min-height: 100px;
+    padding: 10px;
+}
+
+.task-card {
+    padding: 10px;
+    background: white;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+}
+
+.task-title {
+    font-size: 15px;
+    font-weight: 700;
+}
+
+.task-description {
+    font-size: 13px;
+    color: #6c757d;
+}
+
+.task-card {
+    padding: 12px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.08);
+}
+
+    .task-card .btn {
+        padding: 5px 8px;
+        font-size: 14px;
+    }
