--- a/TaskZen/Views/Tasks/Index.cshtml
+++ b/TaskZen/Views/Tasks/Index.cshtml
@@ -17,8 +17,7 @@
     <button class="btn btn-sm border border-success text-success bg-success bg-opacity-10 rounded-pill px-3 betiq">Estudio</button>
     <button class="btn btn-sm border border-warning text-warning bg-warning bg-opacity-10 rounded-pill px-3 betiq">Ejercicio</button>
     <button class="btn btn-sm border border-info text-info bg-info bg-opacity-10 rounded-pill px-3 betiq">Relajación</button>
-    <button class="btn btn-sm border border-danger text-danger bg-danger bg-opacity-10 rounded-pill px-3 betiq">Alimentación</button>
-    <button class="btn btn-sm border border-secondary text-secondary bg-secondary bg-opacity-10 rounded-pill px-3 betiq">Compras</button>
+    <button class="btn btn-sm border border-danger text-danger bg-danger bg-opacity-10 rounded-pill px-3 betiq">Compras</button>
 </div>
 
 
