Se crea la lógica de login y registro de la aplicacion

--- a/TaskZen/Views/Shared/_TaskCard.cshtml
+++ b/TaskZen/Views/Shared/_TaskCard.cshtml
@@ -1,4 +1,4 @@
-﻿@model TaskZen.Models.Task.TaskModel
+﻿@model TaskZen.Models.Task
 
 <div class="task-card shadow-sm p-3 bg-white rounded" id="task-@Model.Id">
     <div class="d-flex justify-content-between align-items-center">
