--- a/TaskZen/Views/Tasks/Index.cshtml
+++ b/TaskZen/Views/Tasks/Index.cshtml
@@ -3,7 +3,7 @@
 *@
 @{
 }
-@model List<TaskZen.Models.Task.TaskModel>
+@model List<TaskZen.Models.Task>
 
 <div class="container mt-3">
     <div class="d-flex justify-content-between align-items-center border-bottom pb-2">
