--- a/TaskZen/Views/Shared/_TaskCard.cshtml
+++ b/TaskZen/Views/Shared/_TaskCard.cshtml
@@ -69,7 +69,7 @@
                                 timer: 2000,
                                 showConfirmButton: false
                             }).then(() => {
-                                location.reload(); // Recargar la página para actualizar la lista
+                                location.reload();
                             });
                         } else {
                             Swal.fire({
