fix: cambio de diseño vista register

--- a/TaskZen/Views/Auth/Index.cshtml
+++ b/TaskZen/Views/Auth/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Index";
 }
-@model TaskZen.DTOs.UserLoginDto
+@* @model TaskZen.DTOs.UserLoginDto *@
 
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="row shadow-lg rounded-4 overflow-hidden" style="max-width: 900px; width: 100%;">
