--- a/TaskZen/wwwroot/css/site.css
+++ b/TaskZen/wwwroot/css/site.css
@@ -20,3 +20,15 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.divLogin {
+    background-image: linear-gradient(270deg, #a7e6ff 28%, rgba(255, 255, 255, 0) 95%);
+    justify-content: center;
+    align-items: center;
+}
+
+.divRegister {
+    background-image: linear-gradient(270deg, #a6ffda 28%, rgba(255, 255, 255, 0) 95%);
+    justify-content: center;
+    align-items: center;
+}
