Se realizan cambios en fuuncionalidad JWT e inicio de sesión

--- a/TaskZen/Views/Shared/_Layout.cshtml
+++ b/TaskZen/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     <!-- Empuja "Cerrar sesión" a la derecha -->
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark d-flex align-items-center" asp-area="" asp-controller="Account" asp-action="Logout">
+                            <a class="nav-link text-dark d-flex align-items-center" asp-area="" asp-controller="Auth" asp-action="Logout">
                                 <i class="bi bi-box-arrow-right me-2"></i> Cerrar sesión
                             </a>
                         </li>
