--- a/TaskZen/Views/Auth/Register.cshtml
+++ b/TaskZen/Views/Auth/Register.cshtml
@@ -10,33 +10,37 @@
         <div class="col-md-6 p-2 bg-white">
             <h2 class="text-center fw-bold mt-2">Registrarme</h2>
 
+        @using (Html.BeginForm("Create", "Auth", FormMethod.Post))
+        {
             <form class="container-sm p-4">
                 <div class="container-sm mb-2 text-start">
                     <label for="name" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="name" placeholder="Ingresa tu nombre" required>
+                    <input type="text" class="form-control" id="name" name="Name" placeholder="Ingresa tu nombre" required>
                 </div>
                 <div class="container-sm mb-2 text-start">
                     <label for="lastName" class="form-label">Apellido</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="Ingresa tu apellido" required>
+                    <input type="text" class="form-control" id="lastName" name="LastName" placeholder="Ingresa tu apellido" required>
                 </div>
                 <div class="container-sm mb-2 text-start">
                     <label for="email" class="form-label">Correo Electrónico</label>
-                    <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo" required>
+                    <input type="email" class="form-control" id="email" name="Email" placeholder="Ingresa tu correo" required>
                 </div>
                 <div class="container-sm mb-2 text-start">
                     <label for="dateBirth" class="form-label">Fecha de Nacimiento</label>
-                    <input type="date" class="form-control" id="dateBirth" required>
+                        <input type="date" class="form-control" id="dateBirth" name="DateBirth" required>
                 </div>
                 <div class="container-sm mb-2 text-start">
                     <label for="password" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required>
+                        <input type="password" class="form-control" id="password" name="Password" placeholder="Ingresa tu contraseña" required>
                 </div>
                 <div class="container-sm mb-2 text-start">
                     <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-                    <input type="password" class="form-control" id="confirmPassword" placeholder="Confirma tu contraseña" required>
+                        <input type="password" class="form-control" id="confirmPassword" name="ConfirmPassword" placeholder="Confirma tu contraseña" required>
                 </div>
                 <button type="submit" class="btn btn-primary w-100 mt-2">Registrarse</button>
             </form>
+        }
+
             <div class="mt-2 text-center">
                 <p>Ya tienes una cuenta?<a class="text-decoration-none" asp-area="" asp-controller="Auth" asp-action="Index">Inicio de Sesión</a> </p>
             </div>
