Se culmina configuración de inicio de sesión

--- a/TaskZen/Views/Tasks/Index.cshtml
+++ b/TaskZen/Views/Tasks/Index.cshtml
@@ -7,10 +7,9 @@
 
 <div class="mb-3">
     <h3 class="fw-bold text-dark">
-        Bienvenido/a, <span class="text-primary">Carla</span>
+        Bienvenido/a, <span class="text-primary">@ViewBag.UserName</span>
     </h3>
 </div>
-
 
 
 <!-- Etiquetas -->
