fix: se cambia icono TaskZen

--- a/TaskZen/Views/Auth/Register.cshtml
+++ b/TaskZen/Views/Auth/Register.cshtml
@@ -49,7 +49,7 @@
 
         <!-- Columna derecha (Imagen 3D) -->
         <div class="col-md-6 d-none d-md-flex divRegister">
-            <img src="~/img/aja.png"
+            <img src="~/img/register.png"
                  alt="Login Illustration" class="img-fluid" style="max-height: 400px;">
         </div>
      </div>
